--- a/views/tpl/index.tpl.html
+++ b/views/tpl/index.tpl.html
@@ -5,7 +5,8 @@
         <title>雨辰科技有限公司</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="theme.css">
+        <link rel="stylesheet" href="http://npmcdn.com/antd/dist/antd.css">
+        <link rel="stylesheet" type="text/css" href="../styles/app.css">
     </head>
     <body>
         <div id="root"><%- root %></div>
