--- a/client/layout/Common.module.less
+++ b/client/layout/Common.module.less
@@ -1,6 +1,8 @@
 .common-wrapper {
+  height : 100%;
   :global {
     .common-content {
+      height         : 100%;
       display        : flex;
       flex-direction : column;
       .header {
