--- a/views/tpl/index.tpl.html
+++ b/views/tpl/index.tpl.html
@@ -5,11 +5,12 @@
         <title>雨辰科技有限公司</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="http://npmcdn.com/antd/dist/antd.css">
-        <link rel="stylesheet" type="text/css" href="../styles/app.css">
+        <style type="text/css">
+          #root > div:first-child{height: 100%}
+        </style>
     </head>
     <body>
-        <div id="root"><%- root %></div>
+        <div id="root" style="height: 100%"><%- root %></div>
 
         <script>
             window.REDUX_STATE = <%- JSON.stringify(state) %>
